Minor style updates to home page, additional test content

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                     <br/>
                     <div>Projects</div>
                 </a>
+                <div class="spacer">&nbsp;</div>
             </div>
         </div>
     </section>
@@ -67,14 +68,12 @@
                 <h2>Research</h2>
             </div>
             <a class="grid-cell-full card bg-dark">
-                <img src="img/voxel1.png" class="photo" alt="voxels"/>
+                <img src="research/voxel1.png" class="photo" alt="voxels"/>
                 <h3>IDEAlab</h3>
-                <p>Stuff</p>
             </a>
             <a class="grid-cell-full card bg-dark">
-                <img src="img/earthpod.jpg" class="photo" alt="earth pod mini"/>
+                <img src="research/earthpod.jpg" class="photo" alt="earth pod mini"/>
                 <h3>DREAMS Lab</h3>
-                <p>Stuff</p>
             </a>
             <a class="grid-cell-full button bg-dark">
                 <div class="lcr">
@@ -139,19 +138,12 @@
                 <h2>Projects</h2>
             </div>
             <a class="grid-cell-full card bg-dark">
-                <div class="vertical-center">
-                    <div>&nbsp;</div>
-                    <div>Highlight 1</div>
-                    <div>&nbsp;</div>
-                    <div></div>
-                </div>
+                <img src="robotics/simulink_robot.jpg" class="photo" alt="small robot"/>
+                <h4>Simulink Compatible Robot Platform</h4>
             </a>
             <a class="grid-cell-full card bg-dark">
-                <div class="vertical-center">
-                    <div>&nbsp;</div>
-                    <div>Highlight 2</div>
-                    <div>&nbsp;</div>
-                </div>
+                <img src="other/fft.jpg" class="photo" alt="small robot"/>
+                <h4>Arduino-Based FFT Analyzer</h4>
             </a>
             <a class="grid-cell-half button bg-dark">
                 <i class="fas fa-robot accent-color"></i>
