Added desktop styling

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <a>CAD</a>
         <a>Code</a>
         <a>Other</a>
+        <a class="social-icon"><i class="fab fa-github"></i></a>
+        <a class="social-icon"><i class="fab fa-youtube"></i></a>
+        <a class="social-icon"><i class="fab fa-twitter"></i></a>
     </div>
     <section id="home">
         <div class="vertical-center bg-transparent">
@@ -63,15 +66,16 @@
     </section>
     <section id="research">
         <div class="spacer">&nbsp;</div>
+        <div class="spacer">&nbsp;</div>
         <div class="grid">
             <div class="grid-cell-full">
                 <h2>Research</h2>
             </div>
-            <a class="grid-cell-full card bg-dark">
+            <a class="grid-cell-full grid-cell-quarter-desktop card bg-dark">
                 <img src="research/voxel1.png" class="photo" alt="voxels"/>
                 <h3>IDEAlab</h3>
             </a>
-            <a class="grid-cell-full card bg-dark">
+            <a class="grid-cell-full grid-cell-quarter-desktop card bg-dark">
                 <img src="research/earthpod.jpg" class="photo" alt="earth pod mini"/>
                 <h3>DREAMS Lab</h3>
             </a>
@@ -91,7 +95,7 @@
             <div class="grid-cell-full">
                 <h2>Startups</h2>
             </div>
-            <a class="grid-cell-full card bg-dark">
+            <a class="grid-cell-full grid-cell-third-desktop card bg-dark">
                 <div class="vertical-center">
                     <div>&nbsp;</div>
                     <div>
@@ -101,7 +105,7 @@
                     <div></div>
                 </div>
             </a>
-            <a class="grid-cell-full card bg-dark">
+            <a class="grid-cell-full grid-cell-third-desktop card bg-dark">
                 <div class="vertical-center">
                     <div>&nbsp;</div>
                     <div>
@@ -111,7 +115,7 @@
                     <div></div>
                 </div>
             </a>
-            <a class="grid-cell-full card bg-dark">
+            <a class="grid-cell-full grid-cell-third-desktop card bg-dark">
                 <div class="vertical-center">
                     <div>&nbsp;</div>
                     <div>
@@ -137,30 +141,40 @@
             <div class="grid-cell-full">
                 <h2>Projects</h2>
             </div>
-            <a class="grid-cell-full card bg-dark">
+            <a class="grid-cell-full grid-cell-quarter-desktop card bg-dark">
                 <img src="robotics/simulink_robot.jpg" class="photo" alt="small robot"/>
                 <h4>Simulink Compatible Robot Platform</h4>
             </a>
-            <a class="grid-cell-full card bg-dark">
+            <a class="grid-cell-full grid-cell-quarter-desktop card bg-dark">
                 <img src="other/fft.jpg" class="photo" alt="small robot"/>
                 <h4>Arduino-Based FFT Analyzer</h4>
             </a>
-            <a class="grid-cell-half button bg-dark">
+            <a class="grid-cell-full grid-cell-quarter-desktop card bg-dark hide-on-mobile">
+
+                <h4>Highlight 3</h4>
+            </a>
+            <a class="grid-cell-full grid-cell-quarter-desktop card bg-dark hide-on-mobile">
+
+                <h4>Highlight 4</h4>
+            </a>
+        </div>
+        <div class="grid">
+            <a class="grid-cell-half grid-cell-quarter-desktop button bg-dark">
                 <i class="fas fa-robot accent-color"></i>
                 <br/>
                 <div>Robotics</div>
             </a>
-            <a class="grid-cell-half button bg-dark">
+            <a class="grid-cell-half grid-cell-quarter-desktop button bg-dark">
                 <i class="fas fa-cubes accent-color"></i>
                 <br/>
                 <div>CAD</div>
             </a>
-            <a class="grid-cell-half button bg-dark">
+            <a class="grid-cell-half grid-cell-quarter-desktop button bg-dark">
                 <i class="fas fa-code accent-color"></i>
                 <br/>
                 <div>Code</div>
             </a>
-            <a class="grid-cell-half button bg-dark">
+            <a class="grid-cell-half grid-cell-quarter-desktop button bg-dark">
                 <i class="fas fa-hammer accent-color"></i>
                 <br/>
                 <div>Other</div>
@@ -169,6 +183,9 @@
         <hr/>
     </section>
     <footer>
+        <a class="social-icon"><i class="fab fa-github"></i></a>
+        <a class="social-icon"><i class="fab fa-youtube"></i></a>
+        <a class="social-icon"><i class="fab fa-twitter"></i></a>
         <div class="fine-print">© Cole Brauer 2020</div>
     </footer>
 </body>
