--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
         <div class="nav-spacer">&nbsp;</div>
         <div class="grid">
             <div class="grid-cell-half">
-                <a>Home</a>
-                <a>Research</a>
-                <a>Startups</a>
-                <a>Projects</a>
+                <a href="index.html">Home</a>
+                <a href="research/index.html">Research</a>
+                <a href="startups/index.html">Startups</a>
+                <a href="projects/index.html">Projects</a>
             </div>
             <div class="grid-cell-half">
-                <a>Robotics</a>
-                <a>CAD</a>
-                <a>Code</a>
-                <a>Other</a>
+                <a href="projects/robotics/index.html">Robotics</a>
+                <a href="projects/cad/index.html">CAD</a>
+                <a href="projects/code/index.html">Code</a>
+                <a href="projects/other/index.html">Other</a>
             </div>
             <div class="grid-cell-full">
-                <a class="social-icon" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
-                <a class="social-icon" title="GitHub"><i class="fab fa-github"></i></a>
-                <a class="social-icon" title="YouTube"><i class="fab fa-youtube"></i></a>
-                <a class="social-icon" title="Twitter"><i class="fab fa-twitter"></i></a>
+                <a href="https://scholar.google.com/citations?user=VJ-As98AAAAJ&hl=en" class="social-icon" title="Google Scholar" target="_blank"><i class="fas fa-graduation-cap"></i></a>
+                <a href="https://github.com/cdbrauer" class="social-icon" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.youtube.com/channel/UCSyP7oPPwPpTErUd2ZU0ghQ" class="social-icon" title="YouTube" target="_blank"><i class="fab fa-youtube"></i></a>
+                <a href="https://twitter.com/TeamAutomata" class="social-icon" title="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
         </div>
     </div>
@@ -83,7 +83,7 @@
                 <h3>Research</h3>
             </div>
             <a href="research/index.html#idealab" class="grid-cell-full grid-cell-half-desktop card bg-dark">
-                <img src="research/idealab.png" class="photo" alt="voxels"/>
+                <img src="research/idealab.png" class="photo" alt="idea lab projects"/>
                 <h4>IDEAlab</h4>
             </a>
             <a href="research/index.html#dreamslab" class="grid-cell-full grid-cell-half-desktop card bg-dark">
@@ -105,7 +105,7 @@
             <div class="grid-cell-full">
                 <h3>Startups</h3>
             </div>
-            <a class="grid-cell-full grid-cell-third-desktop card bg-dark">
+            <a href="startups/index.html#automatadevelopment" class="grid-cell-full grid-cell-third-desktop card bg-dark">
                 <div class="vertical-center">
                     <div>&nbsp;</div>
                     <div>
@@ -115,7 +115,7 @@
                     <div></div>
                 </div>
             </a>
-            <a class="grid-cell-full grid-cell-third-desktop card bg-dark">
+            <a href="startups/index.html#makeapede" class="grid-cell-full grid-cell-third-desktop card bg-dark">
                 <div class="vertical-center">
                     <div>&nbsp;</div>
                     <div>
@@ -125,17 +125,17 @@
                     <div></div>
                 </div>
             </a>
-            <a class="grid-cell-full grid-cell-third-desktop card bg-dark">
+            <a href="startups/index.html#acceleratedcycles" class="grid-cell-full grid-cell-third-desktop card bg-dark">
                 <div class="vertical-center">
                     <div>&nbsp;</div>
                     <div>
-                        <img src="startups/ac-logo.png" class="logo" alt="accelerated cycles"/>
+                        <img src="startups/ac-logo-w.png" class="logo" alt="accelerated cycles"/>
                     </div>
                     <div>&nbsp;</div>
                     <div></div>
                 </div>
             </a>
-            <a class="grid-cell-full button bg-dark">
+            <a href="startups/index.html" class="grid-cell-full button bg-dark">
                 <div class="lcr">
                     <div>Read More</div>
                     <div>&nbsp;</div>
@@ -150,40 +150,40 @@
             <div class="grid-cell-full">
                 <h3>Projects</h3>
             </div>
-            <a class="grid-cell-full grid-cell-quarter-desktop card bg-dark">
-                <img src="robotics/simulink_robot.jpg" class="photo" alt="small robot"/>
+            <a href="projects/robotics/index.html#simulink" class="grid-cell-full grid-cell-quarter-desktop card bg-dark">
+                <img src="projects/robotics/simulink_robot.jpg" class="photo" alt="small robot"/>
                 <h4>Simulink Compatible Robot Platform</h4>
             </a>
-            <a class="grid-cell-full grid-cell-quarter-desktop card bg-dark hide-on-mobile">
+            <a href="projects/cad/index.html#" class="grid-cell-full grid-cell-quarter-desktop card bg-dark hide-on-mobile">
 
                 <h4>CAD Highlight</h4>
             </a>
-            <a class="grid-cell-full grid-cell-quarter-desktop card bg-dark hide-on-mobile">
+            <a href="projects/code/index.html#" class="grid-cell-full grid-cell-quarter-desktop card bg-dark hide-on-mobile">
 
                 <h4>Code Highlight</h4>
             </a>
-            <a class="grid-cell-full grid-cell-quarter-desktop card bg-dark">
-                <img src="other/fft.jpg" class="photo" alt="small robot"/>
+            <a href="projects/other/index.html#fft" class="grid-cell-full grid-cell-quarter-desktop card bg-dark">
+                <img src="projects/other/fft.jpg" class="photo" alt="fft analyzer device"/>
                 <h4>Arduino-Based FFT Analyzer</h4>
             </a>
         </div>
         <div class="grid">
-            <a class="grid-cell-half grid-cell-quarter-desktop button bg-dark">
+            <a href="projects/robotics/index.html" class="grid-cell-half grid-cell-quarter-desktop button bg-dark">
                 <i class="fas fa-robot accent-color"></i>
                 <br/>
                 <div>Robotics</div>
             </a>
-            <a class="grid-cell-half grid-cell-quarter-desktop button bg-dark">
+            <a href="projects/cad/index.html" class="grid-cell-half grid-cell-quarter-desktop button bg-dark">
                 <i class="fas fa-cubes accent-color"></i>
                 <br/>
                 <div>CAD</div>
             </a>
-            <a class="grid-cell-half grid-cell-quarter-desktop button bg-dark">
+            <a href="projects/code/index.html" class="grid-cell-half grid-cell-quarter-desktop button bg-dark">
                 <i class="fas fa-code accent-color"></i>
                 <br/>
                 <div>Code</div>
             </a>
-            <a class="grid-cell-half grid-cell-quarter-desktop button bg-dark">
+            <a href="projects/other/index.html" class="grid-cell-half grid-cell-quarter-desktop button bg-dark">
                 <i class="fas fa-hammer accent-color"></i>
                 <br/>
                 <div>Other</div>
@@ -192,10 +192,10 @@
         </div>
     </section>
     <footer>
-        <a class="social-icon" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
-        <a class="social-icon" title="GitHub"><i class="fab fa-github"></i></a>
-        <a class="social-icon" title="YouTube"><i class="fab fa-youtube"></i></a>
-        <a class="social-icon" title="Twitter"><i class="fab fa-twitter"></i></a>
+        <a href="https://scholar.google.com/citations?user=VJ-As98AAAAJ&hl=en" class="social-icon" title="Google Scholar" target="_blank"><i class="fas fa-graduation-cap"></i></a>
+        <a href="https://github.com/cdbrauer" class="social-icon" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://www.youtube.com/channel/UCSyP7oPPwPpTErUd2ZU0ghQ" class="social-icon" title="YouTube" target="_blank"><i class="fab fa-youtube"></i></a>
+        <a href="https://twitter.com/TeamAutomata" class="social-icon" title="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
         <div class="fine-print accent-light">© Cole Brauer 2020</div>
     </footer>
 </body>
