--- a/research/index.html
+++ b/research/index.html
@@ -27,22 +27,22 @@
     <div class="nav-spacer">&nbsp;</div>
     <div class="grid">
         <div class="grid-cell-half">
-            <a>Home</a>
-            <a>Research</a>
-            <a>Startups</a>
-            <a>Projects</a>
+            <a href="../index.html">Home</a>
+            <a href="../research/index.html">Research</a>
+            <a href="../startups/index.html">Startups</a>
+            <a href="../projects/index.html">Projects</a>
         </div>
         <div class="grid-cell-half">
-            <a>Robotics</a>
-            <a>CAD</a>
-            <a>Code</a>
-            <a>Other</a>
+            <a href="../projects/robotics/index.html">Robotics</a>
+            <a href="../projects/cad/index.html">CAD</a>
+            <a href="../projects/code/index.html">Code</a>
+            <a href="../projects/other/index.html">Other</a>
         </div>
         <div class="grid-cell-full">
-            <a class="social-icon" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
-            <a class="social-icon" title="GitHub"><i class="fab fa-github"></i></a>
-            <a class="social-icon" title="YouTube"><i class="fab fa-youtube"></i></a>
-            <a class="social-icon" title="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="https://scholar.google.com/citations?user=VJ-As98AAAAJ&hl=en" class="social-icon" title="Google Scholar" target="_blank"><i class="fas fa-graduation-cap"></i></a>
+            <a href="https://github.com/cdbrauer" class="social-icon" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.youtube.com/channel/UCSyP7oPPwPpTErUd2ZU0ghQ" class="social-icon" title="YouTube" target="_blank"><i class="fab fa-youtube"></i></a>
+            <a href="https://twitter.com/TeamAutomata" class="social-icon" title="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
         </div>
     </div>
 </div>
@@ -87,11 +87,11 @@
     <hr/>
 </section>
 <footer>
-    <a class="social-icon" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
-    <a class="social-icon" title="GitHub"><i class="fab fa-github"></i></a>
-    <a class="social-icon" title="YouTube"><i class="fab fa-youtube"></i></a>
-    <a class="social-icon" title="Twitter"><i class="fab fa-twitter"></i></a>
-    <div class="fine-print">© Cole Brauer 2020</div>
+    <a href="https://scholar.google.com/citations?user=VJ-As98AAAAJ&hl=en" class="social-icon" title="Google Scholar" target="_blank"><i class="fas fa-graduation-cap"></i></a>
+    <a href="https://github.com/cdbrauer" class="social-icon" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
+    <a href="https://www.youtube.com/channel/UCSyP7oPPwPpTErUd2ZU0ghQ" class="social-icon" title="YouTube" target="_blank"><i class="fab fa-youtube"></i></a>
+    <a href="https://twitter.com/TeamAutomata" class="social-icon" title="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
+    <div class="fine-print accent-light">© Cole Brauer 2020</div>
 </footer>
 </body>
 <script src="../js/jquery-3.1.1.min.js"></script>
