Fixed small startup logos on mobile

--- a/startups/index.html
+++ b/startups/index.html
@@ -54,23 +54,24 @@
     </div>
 </section>
 <section class="grid" id="automatadevelopment">
-    <div class="grid-cell-third">&nbsp;</div>
-    <div class="grid-cell-third">
+    <div class="grid-cell-third hide-on-mobile">&nbsp;</div>
+    <div class="grid-cell-full grid-cell-third-desktop">
         <img src="autodev-text-logo.png" class="logo" alt="automata development"/>
     </div>
-    <div class="grid-cell-third">&nbsp;</div>
+    <div class="grid-cell-third hide-on-mobile">&nbsp;</div>
     <div class="grid-cell-full">
         <h4>Founder, Lead Engineer</h4>
         <p>Automata Development provides a variety of services to help inventors, startups, and makers develop their ideas.</p>
         <p>For more information, see <a href="https://automatadevelopment.com/">automatadevelopment.com</a>.</p>
     </div>
+    <hr/>
 </section>
 <section class="grid" id="makeapede">
-    <div class="grid-cell-third">&nbsp;</div>
-    <div class="grid-cell-third">
+    <div class="grid-cell-third hide-on-mobile">&nbsp;</div>
+    <div class="grid-cell-full grid-cell-third-desktop">
         <img src="map-logo.png" class="logo" alt="make-a-pede"/>
     </div>
-    <div class="grid-cell-third">&nbsp;</div>
+    <div class="grid-cell-third hide-on-mobile">&nbsp;</div>
     <div class="grid-cell-full">
         <h4>Co-founder, Lead Hardware Engineer</h4>
         <p>The Make-A-Pede is a open source robotics platform. It is based on a segmented chassis design, giving the
@@ -84,13 +85,14 @@
             beyond the base design.</p>
         <p>For more information, see <a href="https://makeapede.com/">makeapede.com</a>.</p>
     </div>
+    <hr/>
 </section>
 <section class="grid" id="acceleratedcycles">
-    <div class="grid-cell-third">&nbsp;</div>
-    <div class="grid-cell-third">
+    <div class="grid-cell-third hide-on-mobile">&nbsp;</div>
+    <div class="grid-cell-full grid-cell-third-desktop">
         <img src="ac-logo-w.png" class="logo" alt="accelerated cycles"/>
     </div>
-    <div class="grid-cell-third">&nbsp;</div>
+    <div class="grid-cell-third hide-on-mobile">&nbsp;</div>
     <div class="grid-cell-full">
         <h4>Co-founder, Hardware Engineer</h4>
         <p>The mission of Accelerated Cycles is to make biking safer, more accessible, and more fun for
